# kodik-downloader

./: .gitignore  flake.nix  main.py  pyproject.toml
src/kodik_downloader/: __init__.py
src/kodik_downloader/api/: __init__.py  client.py  ftor.py  list.py  search.py
src/kodik_downloader/cli/: __init__.py  ftor.py  list.py  search.py
src/kodik_downloader/util/: __init__.py  error.py  format.py  ftor.py
